--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#222326</color>
-    <color name="colorPrimaryDark">#121212</color>
+    <color name="colorPrimary">#D1D7EB</color>
+    <color name="colorPrimaryDark">#14B374</color>
     <color name="colorAccent">#E3686A</color>
 </resources>
