--- a/app/src/main/res/menu/filter_songs.xml
+++ b/app/src/main/res/menu/filter_songs.xml
@@ -7,7 +7,5 @@
     <item
         android:id="@+id/twelve_hours"
         android:title="@string/menu_filter_twelve_hours" />
-    <item
-        android:id="@+id/all"
-        android:title="@string/menu_filter_all" />
+    <item android:title="@string/menu_filter_all" />
 </menu>
